# tg-finance-bot

./: README.md  pyproject.toml
finance-bot/: .env
